@@ -17,9 +17,6 @@ macro
   string1   "([^\n\r\f"]|\\{nl}|{nonascii}|{escape})*"
   string2   '([^\n\r\f']|\\{nl}|{nonascii}|{escape})*'
   string    {string1}|{string2}
-  invalid1  \"([^\n\r\f\\"]|\\{nl}|{nonascii}|{escape})*
-  invalid2  \'([^\n\r\f\\']|\\{nl}|{nonascii}|{escape})*
-  invalid   {invalid1}|{invalid2}
   Comment   \/\*(.|[\r\n])*?\*\/
 
 rule
@@ -56,7 +53,6 @@ rule
             [\s\t\r\n\f]+    { [:S, text] }
             [\.*:\[\]=\)]    { [text, text] }
             {string}         { [:STRING, text] }
-            {invalid}        { [:INVALID, text] }
             .                { [text, text] }
 end
 end
