@@ -7,6 +7,11 @@ module Nokogiri
         @scanner = Nokogiri::CSS::Tokenizer.new
       end
 
+      def test_tokenize_bad_single_quote
+        @scanner.scan("'")
+        assert_tokens([["'", "'"]], @scanner)
+      end
+
       def test_not_equal
         @scanner.scan("h1[a!='Tender Lovemaking']")
         assert_tokens([ [:IDENT, 'h1'],
